--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Sass/styles.css">
     <link rel="stylesheet" href="css/all.min.css">
     <!--[if lt IE 9]>
       <script src="./js/html5shiv.min.js"></script>
@@ -126,6 +126,7 @@
                     <h2>Market Analysis <br>Project</h2>
                     <p class="lead">Protocols apart from aengage models, pricing billing </p>
                     <img class="look hidden-sm hidden-md hidden-xs" src="Ellipse 87.png" alt="">
+
                   </div> 
               </div>
             </div>
